	type (without parameters).

	* The application's error handler may now return null or
	undefined to make it act as if there were not error handler
	installed at all.

	* Added esxx/Object.js include file, which adds extras to the
	Object class. Currently, it only adds $(), which can be used
	to sanitize the 'this' variable in closures.

	* Added --no-handler option, for web servers that invoke
	FastCGI servers without an extra file type handler, such as
	lighttpd.

	* Embedded H2 updated to 1.1.102, 2008-10-24.

	* The stylesheets are now independent from the applications
	and may be viewed and unloaded via JMX. It's also possible to 
	view runtime statistics of individual stylesheets.

0.9.20080927
	* Fixed a bug that closed System.in in script mode, causing
	System.console() to return null.

	* When using the built-in HTTP server, a body will never be
	sent when the status code is 1xx, 204 or 304, as per HTTP
	spec.

0.9.20080924
	* Upgraded to HtmlCleaner 2.1.

	* Upgraded to HTTPClient 4.0 beta 1 and HTTPCore 4.0 beta 2.

	* When creating a new URI object from an old, also copy all of
	the old object's properties (such as auth etc).

	* Added code for application/x-www-form-urlencoded encoding in
	responses (and thus HTTP URI requests).

	* Recognize Apache's Authorization "CGI" environment variable
	as an HTTP header.

0.9.20080821
	* Loads of bug fixes.

	* Added getScriptFilename(), getPathInfo(), getScriptName() to
	Request object.

	* Disabled validate-if-schema feature on XML parser.

	* Added exit handler support, to execute JS code when an app
	is being unloaded.

	* The error handler now receives (req, ex) arguments.

	* Added 'buffered' property to the Response object, which
	makes ESXX buffer the response in RAM, in order to be able to provide
	the Content-Length HTTP header.

	* Added JMX support. Apps can be inspected and unloaded via
	JConsole.

	* Init script now work on RHEL/CentOS 4.x.

0.9.20080619
	* Initial binary release.