@@ -89,7 +89,8 @@ IF (UNIX AND NOT WIN32)
                    ${CMAKE_CURRENT_BINARY_DIR}/package/@PROJECT_NAME@ @ONLY)
     CONFIGURE_FILE(package/initscript-binfmt.in 
                    ${CMAKE_CURRENT_BINARY_DIR}/package/@PROJECT_NAME@-binfmt @ONLY)
-    CONFIGURE_FILE(package/config.in ${CMAKE_CURRENT_BINARY_DIR}/package/@PROJECT_NAME@.conf @ONLY)
+    CONFIGURE_FILE(package/config.in 
+    		   ${CMAKE_CURRENT_BINARY_DIR}/package/@PROJECT_NAME@.conf @ONLY)
   ENDIF (APPLE)
 
   CONFIGURE_FILE(package/javawrapper.in ${CMAKE_CURRENT_BINARY_DIR}/@PROJECT_NAME@ @ONLY)
@@ -116,6 +117,10 @@ IF (UNIX AND NOT WIN32)
   INSTALL (FILES ${CMAKE_CURRENT_BINARY_DIR}/package/@PROJECT_NAME@.conf
 	   DESTINATION ${SYSCONF_INSTALL_DIR}/${CONFDIR}
 	   RENAME @PROJECT_NAME@)
+
+  INSTALL (FILES ${CMAKE_CURRENT_BINARY_DIR}/package/@PROJECT_NAME@.conf
+	   DESTINATION ${SYSCONF_INSTALL_DIR}/${CONFDIR}
+	   RENAME @PROJECT_NAME@-js)
 
   # Install utility files
   INSTALL (DIRECTORY share/
