@@ -1,3 +1,8 @@
-#JVMARGS=-Desxx.resource-uri=http://example.com/esxx/
+#JVMARGS="-Desxx.resource-uri=http://example.com/esxx/
+#         -Dcom.sun.management.jmxremote 
+#         -Dcom.sun.management.jmxremote.port=4567
+#         -Dcom.sun.management.jmxremote.authenticate=false
+#         -Dcom.sun.management.jmxremote.ssl=false"
+
 ESXX_PATH="@SHARE_INSTALL_PREFIX@/@PROJECT_NAME@:@SHARE_INSTALL_PREFIX@/@PROJECT_NAME@/site"
 JAVA=/System/Library/Frameworks/JavaVM.framework/Versions/1.6/Home/bin/java
